--- a/css/main.css
+++ b/css/main.css
@@ -133,7 +133,6 @@ h3{
     color: #f24918;
     font-family: 'PT Sans', sans-serif;
     margin: 0;
-
 }
 
 .button {
@@ -489,6 +488,16 @@ div.invitado{
 
 div.invitado img {
     max-width: 100%;
+    filter: gray;
+    -webkit-filter: grayscale(1);
+    -webkit-transition:  all .5s ease-in-out;
+}
+
+div.invitado img:hover
+{
+    
+    -webkit-filter: grayscale(0);
+    -webkit-transform: scale(1.1);
 }
 
 div.invitado p {
@@ -499,7 +508,116 @@ div.invitado p {
     margin: 0;
     background-color:rgba(0, 0, 0, 0.55);
     width: 100%;
+    text-align: left;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    color:#f24918;
+    text-transform: uppercase;
+    -webkit-transition: all .5s ease-in-out;
 }
+
+div.invitado:hover p{
+    bottom: -80px;
+    opacity:0;
+}
+
+/**Contador**/
+
+.parallax::before {
+width: 100%;
+height: 100%;
+position: absolute;
+top:0;
+left:0;
+background-repeat: no-repeat;
+background-size: cover;
+background-position: center center;
+background-attachment: fixed;
+-webkit-filter: brightness(.8);
+filter: brightness(.8)
+}
+
+div.contador {
+    position: relative;
+    height: auto;
+
+}
+
+div.contador::before {
+    background-image: url(../img/bg-resumen.jpg);
+    content: '';
+}
+
+ul.resumen-evento{
+    position: relative;
+    padding: 120px 0;
+
+}
+
+ul.resumen-evento li{
+    width: 50%;
+    float: left;
+    text-align: center;
+    color:white;
+    text-transform: uppercase;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 24px;
+}
+
+@media only screen and (min-width: 768px)
+{
+    ul.resumen-evento li{
+        width: 25%;
+    }
+}
+
+p.numero
+{
+    color:#f24918;
+    font-size: 2em;
+    display: block;
+    margin: 0 0 10px 0;
+
+}
+
+
+/**Lista de precios **/
+
+ul.lista-precios > li
+{
+    padding: 10px;
+}
+
+@media only screen and (min-width: 768px)
+{
+    ul.lista-precios > li {
+        float: left;
+        width: 33.3%;
+    }
+}
+
+div.tabla-precio
+{
+    border: 1px solid #e1e1e1;
+    background-color: #ffffff;
+    padding: 40px 0;
+    text-align: center;
+
+}
+
+div.tabla-precio ul li {
+    font-family: 'Times New Roman', Times, serif;
+    font-size: 14px;
+    text-transform: uppercase;
+    color: #868686;
+    line-height: 26px;
+}
+
+div.tabla-precio h3 {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    text-transform: uppercase;
+}
+
 
 /* ==========================================================================
    Helper classes
