--- a/css/main.css
+++ b/css/main.css
@@ -715,11 +715,11 @@ blockquote p::before{
 
 }
 
-footer.info-testimonial {
+section footer.info-testimonial {
 
     padding: 0;
 }
-footer.info-testimonial img {
+section footer.info-testimonial img {
     float: left;
     width: 20%;
     border-radius: 50%;
@@ -728,7 +728,7 @@ footer.info-testimonial img {
 
 }
 
-footer.info-testimonial cite {
+section footer.info-testimonial cite {
     text-align: left;
     color: #f24918;
     text-transform: uppercase;
@@ -738,7 +738,7 @@ footer.info-testimonial cite {
     float: right;
 }
 
-footer.info-testimonial cite span {
+section footer.info-testimonial cite span {
     color: #000000;
     display: block;
     text-transform: none;
@@ -799,7 +799,7 @@ div.cuenta-regresiva
 
 /* footer */
 
-footer 
+.site-footer 
 {
     background-color: #353535;
     padding-top: 40px;
